--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,8 @@
 .reg_box {
     margin-bottom: 10px;
     border-radius: 10px;
+    padding-left: 5px;
+    width: 200px;
 }
 
 .reg_button {
@@ -73,5 +75,22 @@
 .error_text {
     color: red;
     font-size: 8pt;
+}
+
+.log_bxtitle {
+    margin-top: 3px;
+    text-shadow: 1px 1px 2px gray;
+    margin-bottom: 15px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.log_box {
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding-left: 5px;
+    width: 200px;
+    display: inline-block;
+    vertical-align: top;
 }
 
